# tactus-computability-theory

./: .gitignore  Cargo.toml  README.md  check-modules.sh  check.sh
docs/: constructive-fp-group-scope.md  gap2-input-loader-plan.md  gap2-l0-search-rm-plan.md  gap2-register-modular-plan.md  gap2-register-to-tm-plan.md
poems/: frame-lemma.md  index-card.md  maxheartbeats.md  the-frame-proven.md
src/: ceer_fp_conditional.rs  ceer_layer05.rs  ceer_layer05_bridge.rs  ceer_relator_match.rs  compspec_decode.rs  conditional_halt.rs  formula.rs  gap2_emit_power.rs  gap2_emit_power3.rs  gap2_emit_seq.rs  gap2_emit_window.rs  gap2_fam_digits.rs  gap2_fam_split.rs  gap2_ignition.rs  gap2_init.rs  gap2_inverse.rs  gap2_master_mgmt.rs  gap2_psc_rp.rs  gap2_reject_classify.rs  gap2_relnum.rs  gap2_relnum_dds.rs  gap2_relnum_digits.rs  gap2_reloc.rs  gap2_reloc_compare.rs  gap2_rho_unshift.rs  gap2_tail_emit.rs  gap2_tail_emit_v.rs  gap2_tail_lift.rs  gap2_tail_lift_v.rs  gap2_tail_phase1.rs  gap2_tail_phase1_m1.rs  gap2_tail_phase1_m1_v.rs  gap2_tail_phase1_v.rs  gap2_tail_phases.rs  gap2_tail_phases_v.rs  gap2_tail_power.rs  gap2_tail_power_v.rs  gap2_tail_walks.rs  gap2_tail_walks_v.rs  godel.rs  (+59 more)
